v134
    -In png parser detect iCCP compressed chunk, test for grayscale
    -Add iso 9960 parser. Active for extension .iso
    -Cleanup and small fixes
    -Fix pdfbiparser, set min width limit to >1
v133
    -In mdf parser set minimum length to 4 sectors
    -Change text parser
    -Reset info text in zlib parser
    -Fix wrong info when MT is not defined
    -Remove some text related code from codec
    -No parser outputs BINTEXT, ISOTEXT so disable in most places
v132
    -Disable zip extension. If files are stored, the contents will not be recognized.
    -Limit gzip min size to 6.
    -Fixes in codec.
    -Use a maximum of one temporary memory/disk file per recursion level.
     In some exceptional cases, more. To reduce memory relocation.
    -Fix tar parser
    -Show less parsing progress
    -Fix png compression
    -Detect tar without ustar
    -Cleanup
    -More file extension based parser selections
v131
    -Add file extension based parser selection and virtual files
    -Enable tar recursion mode, select parser for each file from file extension
v130
    -Fix large memory leaks in parser, now mem usage ~400MB RAM, before in GB
    -Add tar parser recursive mode (disabled)
    -Fix gzip parser, small files not detected
    -bzip2 parser failed to detect small blocks
    -zlib parser priority change and fix for bad detection
    -Changes to textparser (needs rewrite)
v129
    -Fix bzip2, tiff parser
    -Add 0 priority parser changes to:
     base64(1/2), bmp, pnm, szdd.
     Priority changes from n to 0 when valid header is found and length of data is >64000
    -Change zlib priority
    -Re-enable all parser if 0 parser reports fail.
v128
    -Change priority to 0 in parsers:
     bzip2 - after 4 blocks
     cd - after 32 sectors
     mdf - after 32 sectors
     tar - after 4 files
v127
    -Expand priority range to 0-6, 6=default
    -Fix tar, bzip2, text parser
    -Add support for files larger then 2GB